--- a/src/app/video/video.component.html
+++ b/src/app/video/video.component.html
@@ -1,7 +1,10 @@
-<div class="container mainnContainer">
+<div class="container mainContainer">
   <div class="row margin-top-20 margin-bottom-20">
     <div class="col-xs-12 col-md-2" *ngFor="let video of searchVideoList">
-      <app-video-card [video]="video"></app-video-card>
+      <app-video-card [video]="video" (click)="setCurrentVideo(video)"></app-video-card>
     </div>
-  </div>  
+  </div>
+  <div class="col-xs-12 col-md-12" *ngIf="clickedVideo">
+    <app-play-video [video]="currentVideo"></app-play-video>
+  </div>
 </div>
