Combined navbar colors

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,13 +2,13 @@
   <button class="navbar-toggler mt-3" data-toggle="collapse" data-target="#navbarMenu">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <a class="navbar-brand mx-3" routerLink="/"> ExperimenTube
-    <!--<img src="#" width="70" height="40" alt="">-->
+  <a class="navbar-brand mx-3" routerLink="/"> 
+    <img src="../../assets/experimenTube.png" width="70" height="40" alt="main-logo"> ExperimenTube
   </a>
-  <div class="collapse navbar-collapse" id="navbarMenu">
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search video" aria-label="Search" [(ngModel)]="searchField" name="search">
-      <i class="fas fa-search my-sm-0" (click)="searchVideo()"></i>
+  <div class="collapse navbar-collapse d-flex flex-row-reverse" id="navbarMenu">
+    <form class="form-inline">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search video" aria-label="Search" [(ngModel)]="searchField" name="search">      
+      <button class="btn searchButton"><fa-icon class="searchIcon" [icon]="faSearch" (click)="searchVideo()"></fa-icon></button>
     </form>
   </div>
 </nav>
