--- a/src/app/video-card/video-card.component.html
+++ b/src/app/video-card/video-card.component.html
@@ -2,7 +2,7 @@
   <figure>
     <img class="picture" src="{{video.snippet.thumbnails.default.url}}"/>
   </figure>
-  <div class="content">
+  <div>
     <p class="title">{{video.snippet.title}}</p>
   </div>
 </div>
