--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,7 +3,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <a class="navbar-brand mx-3" routerLink="/"> 
-    <img src="../../assets/experimenTube.png" width="70" height="40" alt="main-logo"> ExperimenTube
+    <img src="../../assets/experimenTube2.png" width="70" height="40" alt="main-logo"> ExperimenTube
   </a>
   <div class="collapse navbar-collapse d-flex flex-row-reverse" id="navbarMenu">
     <form class="form-inline">
