--- a/src/app/play-video/play-video.component.scss
+++ b/src/app/play-video/play-video.component.scss
@@ -1,6 +1,7 @@
 @import '../../styles/var';
 
 .container {
+  margin-top: 10px; 
   font-family: $font-family;
   
   .description {
@@ -11,12 +12,13 @@
   }
 
   .title {
+    color: $green;
     display: inline;    
   }
 }
 
 
 .video-container {
+  margin-top: 10px;
   border-radius: 2%;
-  margin: 5px;
 }
