--- a/src/app/video-card/video-card.component.scss
+++ b/src/app/video-card/video-card.component.scss
@@ -1,8 +1,11 @@
 @import '../../styles/var';
 
 .video-card {
-  border-radius: 2%;
-  margin: 5px;
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 5px;
+  border-color: $green;
+  margin: 2px;
   max-width: 300px;
   height: auto;
   overflow: hidden;
@@ -14,6 +17,7 @@
 .title {
   font-family: $font-family;
   height: 29px;
+  color: $white;
 }
 
 .picture {
