Some comments were added

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,15 +1,38 @@
 <hr>
 <div class="footer-container row mr-auto">
   <div class="col-xs-3 col-md-3 offset-md-1">
-    <img src="../../assets/experimenTube.png" width="100" height="65"/>
-    <p>ExperimenTube</p>
+    <div class="title row">
+      <p>Experimentality</p>
+    </div>
+    <div class="row">
+      <a href="https://www.experimentality.co/"><img src="../../assets/experimentality.png" width="85" height="65"/></a>
+    </div>    
   </div>
   <div class="col-xs-3 col-md-3 offset-md-1">
-    <img src="../../assets/cc-logo.svg" width="153" height="37"/>
-    <p>Medellín - Colombia</p>
+    <div class="title row">
+      <p>Medellín - Colombia</p>
+    </div>
+    <div class="row">
+      <img src="../../assets/cc-logo.svg" width="153" height="37"/>
+    </div>    
   </div>
   <div class="col-xs-3 col-md-3 offset-md-1">
-    <p>Developed by: <a href="https://www.linkedin.com/in/juan-fernando-giraldo-cardona-juanferrgiraldo/">Juan Fernando Giraldo Cardona</a></p>
-    <a href="https://github.com/juanferrgiraldo/ExperimenTube"><i class="fab fa-github fa-2x"></i></a>
+    <div class="title row">
+      <p>Developed by:</p>  
+    </div>
+    <div class="row">
+      <p><a href="https://www.linkedin.com/in/juan-fernando-giraldo-cardona-juanferrgiraldo/">Juan Fernando Giraldo Cardona</a></p>
+    </div>    
+    <div class="row">
+      <div class="col">
+        <a href="https://github.com/juanferrgiraldo/ExperimenTube"><i class="fab fa-github fa-2x"></i></a>
+      </div>
+      <div class="col">
+        <a href="https://www.linkedin.com/in/juan-fernando-giraldo-cardona-juanferrgiraldo/"><i class="fab fa-linkedin fa-2x"></i></a>
+      </div>
+      <div class="col">
+        <a href="https://www.facebook.com/juanferrgiraldo"><i class="fab fa-facebook-square fa-2x"></i></a>
+        </div>
+    </div>        
   </div>
 </div>
