--- a/src/app/play-video/play-video.component.html
+++ b/src/app/play-video/play-video.component.html
@@ -1,4 +1,5 @@
 <div class="row">
+  <!--Here is where the safe-url pipe is used to send the url and prevents XSS-->
   <div class="video-container col-xs-12 col-md-7">
     <iframe id="player" type="text/html" width="640" height="390" [src]="url | safeUrl: url" frameborder="0" allowfullscreen></iframe>
   </div>
