--- a/src/app/video/video.component.html
+++ b/src/app/video/video.component.html
@@ -1,9 +1,13 @@
-<div class="container main-container">
-  <div class="video-list row margin-top-20 margin-bottom-20">
+<div class="container main-container">  
+    <p class="title">{{title}}</p>
+  <!--List of founded videos-->
+  <div class="video-list row margin-top-20 margin-bottom-20">    
     <div [ngClass]="shouldMount ? 'col-xs-12 col-md-2' : 'col-xs-12 col-md-2 mr-auto'" *ngFor="let video of searchVideoList">
       <app-video-card [video]="video" (click)="setCurrentVideo(video)"></app-video-card>
     </div>
   </div>
+    <span class="information" *ngIf="!mountedVideo">Click over a video to play it!</span>
+  <!--Section where the playing video is shown-->
   <div class="row">
     <div class="col-xs-12 col-md-12" *ngIf="mountedVideo">
       <app-play-video [video]="currentVideo"></app-play-video>
