The video list component fits in mobile approach

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,22 +1,22 @@
 <hr>
 <div class="footer-container row mr-auto">
-  <div class="col-xs-3 col-md-3 offset-md-1">
+  <div class="col-sm-3 col-md-3 offset-md-1">
     <div class="title row">
       <p>Experimentality</p>
     </div>
     <div class="row">
-      <a href="https://www.experimentality.co/"><img src="../../assets/experimentality.png" width="85" height="65"/></a>
+      <a href="https://www.experimentality.co/"><img class="logo-experimentality" src="../../assets/experimentality.png"/></a>
     </div>    
   </div>
-  <div class="col-xs-3 col-md-3 offset-md-1">
+  <div class="col-sm-3 col-md-3 offset-md-1">
     <div class="title row">
       <p>Medellín - Colombia</p>
     </div>
     <div class="row">
-      <img src="../../assets/cc-logo.svg" width="153" height="37"/>
+      <img class="logo-cc" src="../../assets/cc-logo.svg"/>
     </div>    
   </div>
-  <div class="col-xs-3 col-md-3 offset-md-1">
+  <div class="col-sm-3 col-md-3 offset-md-1">
     <div class="title row">
       <p>Developed by:</p>  
     </div>
