--- a/src/app/video-card/video-card.component.scss
+++ b/src/app/video-card/video-card.component.scss
@@ -9,6 +9,7 @@
   max-width: 300px;
   height: auto;
   overflow: hidden;
+
   &:hover {
     cursor: pointer;
   }
@@ -16,12 +17,32 @@
 
 .title {
   font-family: $font-family;
-  height: 29px;
+  height: 30px;
   color: $white;
+  font-size: 11px;
+  margin-bottom: 2px;
 }
 
 .picture {
   margin: 12px 0px;
+  margin-bottom: 2px;
   max-width: 100%;
   max-height: 100%;
+}
+
+@media only screen and (max-width: 768px) {
+  .video-card {
+    border-width: 1px;
+    margin: 0px;
+    max-width: 50px;
+    max-height: 50px;
+  }
+  .title {
+    font-size: 6px;
+  }
+  .picture {
+    margin: 0px;
+    max-width: 50px;
+    max-height: 50px;
+  }
 }
