--- a/src/app/video/video.component.scss
+++ b/src/app/video/video.component.scss
@@ -3,7 +3,7 @@
 .main-container {
   padding-top: 10px;
   font-family: $font-family; 
-  
+
   .title {
     color: $green;
     font-size: 40px;
@@ -13,11 +13,62 @@
     color: $gray;
     font-size: 40px;
   }
+
+  .video-list {
+    display: flex;
+    background-color: $gray;
+    margin: 20px 10px;    
+    border-radius: 5px;
+  }
+
+  .video-card {
+    flex: 0 0 16.666667%;
+    max-width: 16.666667%;
+    position: relative;
+    width: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  .trending {
+    margin-right: auto !important;
+  }
+  
+  .play-video {
+    display: flex;
+    flex: 100%;
+    max-width: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 }
 
-.video-list {
-  background-color: $gray;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  border-radius: 5px;
+
+@media only screen and (max-width: 768px) {
+  .main-container {
+    padding-top: 5px;
+
+    .title {
+      font-size: 20px;
+    }
+
+    .information {
+      font-size: 20px;
+    }
+
+    .video-list {
+      flex-wrap: nowrap;
+      justify-content: flex-start;
+      margin: 20px 5px;      
+    }
+
+    .video-card {
+      flex: 0 0 8.666663%;
+      max-width: 100%;
+      position: relative;
+      width: 100%;
+      padding-left: 9px;
+      padding-right: 8px;
+    }
+  }
 }
