--- a/src/app/video/video.component.html
+++ b/src/app/video/video.component.html
@@ -8,7 +8,7 @@
   </div>
   <span class="information" *ngIf="!mountedVideo">Click over a video to play it!</span>
   <!--Section where the playing video is shown-->
-  <div class="row">
+  <div class="">
     <div class="play-video" *ngIf="mountedVideo">
       <app-play-video [video]="currentVideo"></app-play-video>
     </div>
