Updates to deploy to heroku

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,11 +1,11 @@
 <div class="">
   <nav class="navbar">   
     <!--This is a developer proposal for logo and project name -->
-    <a class="navbar-brand mx-3" routerLink="/"> 
+    <a class="navbar-brand mx-3"> 
       <img src="../../assets/experimenTube.png" width="70" height="40" alt="main-logo"> ExperimenTube
     </a>
     <!--But here are the original logo and name project
-    <a class="navbar-brand mx-3" routerLink="/"> 
+    <a class="navbar-brand mx-3"> 
       <img src="../../assets/experimentality.png" width="60" height="40" alt="main-logo"> Experimentality
     </a>
     -->
